Hints review fixes
Fixes for:
double intros and overviews sometimes
hints button wrong size and color on click
remove number from button text
next/prev button text vertical alignment
scrollbars

--- a/app/styles/play/level/hints-view.sass
+++ b/app/styles/play/level/hints-view.sass
@@ -14,29 +14,28 @@
     position: absolute
     right: 5px
     top: 5px
-    
+
     .glyphicon-remove
       position: relative
       top: 4px
-  
+
   h1
     margin-bottom: 30px
 
   .btn-area
     margin-top: 20px
-    
-  .previous-btn
-    position: absolute
-    left: 10px
-    bottom: 10px
 
-  .next-btn
-    position: absolute
-    right: 10px
-    bottom: 10px
+  .hint-title
+    font-size: 18px
+    text-transform: uppercase
 
   .hint-body
-    height: 360px
-    overflow: scroll
+    height: 390px
+    overflow-y: auto
     img
       width: 100%
+
+  .hint-pagination
+    font-size: 18px
+    margin-top: 0px
+    text-transform: uppercase
