--- a/app/styles/play/level/tome/spell_list_entry.sass
+++ b/app/styles/play/level/tome/spell_list_entry.sass
@@ -88,11 +88,11 @@
   .hints-button
     float: right
     border-style: solid
-    border-image: url(/images/common/button-background-primary-active.png) 14 20 14 20 fill round
+    border-image: url(/images/common/button-background-primary-active.png) 14 20 20 20 fill round
+    border-width: 7px 10px 10px 10px
     color: white
-    padding: 0px 20px
     &:hover, &:active
-      background-image: url(/images/common/button-background-primary-pressed.png)
+      border-image: url(/images/common/button-background-primary-pressed.png) 14 20 20 20 fill round
 
   .thang-avatar-wrapper
     border-width: 0
